h11types/src/parser/snapshots/h11types__parser__p_h11header__test__0-headers_complete.snap
---
source: h11types/src/parser/p_h11header.rs
expression: "InternalTc { input: tc_input, output: r, res_str, }"
---
InternalTc {
    input: "A: ffffoo.bar\r\nB: foo\r\n\r\n",
    output: TestReceiver {
        hdrs: [
            "Hu[A=ffffoo.bar]",
            "Hu[B=foo]",
        ],
        finished: true,
    },
    res_str: Ok(
        Complete(
            25,
        ),
    ),
}
