h11types/src/parser/snapshots/h11types__parser__p_h11header__test__0-headers_partial.snap
---
source: h11types/src/parser/p_h11header.rs
expression: "InternalTc { input: tc_input, output: r, res_str, }"
---
InternalTc {
    input: "A: ffffoo",
    output: TestReceiver {
        hdrs: [],
        finished: false,
    },
    res_str: Ok(
        Incomplete(
            0,
            "A: ffffoo",
        ),
    ),
}
