h11types/src/parser/snapshots/h11types__parser__p_h11header__test__1-headers_partial.snap
---
source: h11types/src/parser/p_h11header.rs
expression: "InternalTc { input: tc_input, output: r, res_str, }"
---
InternalTc {
    input: "A: foo\r\nB: ",
    output: TestReceiver {
        hdrs: [
            "Hu[A=foo]",
        ],
        finished: false,
    },
    res_str: Ok(
        Incomplete(
            8,
            "B: ",
        ),
    ),
}
