h11types/src/parser/snapshots/h11types__parser__p_h11header__test__2-headers_complete.snap
---
source: h11types/src/parser/p_h11header.rs
expression: "InternalTc { input: tc_input, output: r }"
---
InternalTc {
    input: "\r\n\r\nfoo",
    output: TestReceiver {
        hdrs: [],
        finished: true,
    },
}
