h11types/src/parser/snapshots/h11types__parser__p_h11header__test__3-headers_complete.snap
---
source: h11types/src/parser/p_h11header.rs
expression: "InternalTc { input: tc_input, output, res_str, }"
---
InternalTc {
    input: "Host: test.rustcryp.to:8181\r\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:151.0) Gecko/20100101 Firefox/151.0\r\nAccept: image/avif,image/webp,image/png,image/svg+xml,image/*;q=0.8,*/*;q=0.5\r\nAccept-Language: en-US,en;q=0.9\r\nAccept-Encoding: gzip, deflate, br, zstd\r\nDNT: 1\r\nSec-GPC: 1\r\nConnection: keep-alive\r\nReferer: https://test.rustcryp.to:8181/\r\nSec-Fetch-Dest: image\r\nSec-Fetch-Mode: no-cors\r\nSec-Fetch-Site: same-origin\r\nPriority: u=6\r\nPragma: no-cache\r\nCache-Control: no-cache\r\n\r\n",
    output: TestReceiver {
        hdrs: [
            "HdHost(Bytes([116, 101, 115, 116, 46, 114, 117, 115, 116, 99, 114, 121, 112, 46, 116, 111, 58, 56, 49, 56, 49]))",
            "Hu[User-Agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:151.0) Gecko/20100101 Firefox/151.0]",
            "Hu[Accept=image/avif,image/webp,image/png,image/svg+xml,image/*;q=0.8,*/*;q=0.5]",
            "Hu[Accept-Language=en-US,en;q=0.9]",
            "Hu[Accept-Encoding=gzip, deflate, br, zstd]",
            "HdUnknown(H11UnknownField([68, 78, 84]), Integer(1))",
            "HdUnknown(H11UnknownField([83, 101, 99, 45, 71, 80, 67]), Integer(1))",
            "HdConnection(KeepAlive)",
            "Hu[Referer=https://test.rustcryp.to:8181/]",
            "Hu[Sec-Fetch-Dest=image]",
            "Hu[Sec-Fetch-Mode=no-cors]",
            "Hu[Sec-Fetch-Site=same-origin]",
            "Hu[Priority=u=6]",
            "Hu[Pragma=no-cache]",
            "Hu[Cache-Control=no-cache]",
        ],
        finished: true,
    },
    res_str: Ok(
        Complete(
            503,
        ),
    ),
}
